--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,13 @@
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
+body {
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
+}
